--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Inspiration</h1>
 
-<p>My first paragraph.</p>
+<p>Awwwards
+
+https://www.awwwards.com/
+
+Are you planning on building a website and looking for some inspiration? Awwwards is a place to go. Every day Awwwards recognizes talented web developers, designers and creative agencies from all over the world for creating innovative, functional, and beautiful digital products. I check Awwwards daily to get some inspiration and some ideas for web design and development. 
+</p>
 
 </body>
 </html>
