--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 
 <h1>Inspiration</h1>
 
-<p>Awwwards
+<h3>Awwwards</h3>
 
-<a href="url">https://www.awwwards.com/</a>
+<p><a href="https://www.awwwards.com/">
+<img src=”logo-schema.png” alt="awwwards.com" height="132">
+</a></p>
 
-
-Are you planning on building a website and looking for some inspiration? Awwwards is a place to go. Every day Awwwards recognizes talented web developers, designers and creative agencies from all over the world for creating innovative, functional, and beautiful digital products. I check Awwwards daily to get some inspiration and some ideas for web design and development. 
+<p>Are you planning on building a website and looking for some inspiration? Awwwards is a place to go. Every day Awwwards recognizes talented web developers, designers and creative agencies from all over the world for creating innovative, functional, and beautiful digital products. I check Awwwards daily to get some inspiration and some ideas for web design and development. 
 </p>
 
 </body>
