--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h3>Awwwards</h3>
 
 <p><a href="https://www.awwwards.com/">
-<img src=logo-schema.png alt="awwwards.com" width="100" height="132">
+<img src=logo-schema.png alt="awwwards.com">
 </a></p>
 
 <p>Are you planning on building a website and looking for some inspiration? Awwwards is a place to go. Every day Awwwards recognizes talented web developers, designers and creative agencies from all over the world for creating innovative, functional, and beautiful digital products. I check Awwwards daily to get some inspiration and some ideas for web design and development. 
