--- a/index.html
+++ b/index.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
+</head>
 <body>
 
-<h1>Inspiration</h1>
+<h2>Inspiration</h2>
 
-<h3>Awwwards</h3>
+<div class="row">
+  <div class="column">
+    <h3>Awwwards</h3>
+    <p><a href="https://www.awwwards.com/">
+    <img src=logo-schema.png alt="awwwards.com"></a>
+    </p>
 
-<p><a href="https://www.awwwards.com/">
-<img src=logo-schema.png alt="awwwards.com">
-</a></p>
-
-<p>Are you planning on building a website and looking for some inspiration? Awwwards is a place to go. Every day Awwwards recognizes talented web developers, designers and creative agencies from all over the world for creating innovative, functional, and beautiful digital products. I check Awwwards daily to get some inspiration and some ideas for web design and development. 
-</p>
+    <p>Are you planning on building a website and looking for some inspiration? Awwwards is a place to go. Every day Awwwards recognizes talented web developers, designers and creative agencies from all over the world for creating innovative, functional, and beautiful digital products. I check Awwwards daily to get some inspiration and some ideas for web design and development. 
+    </p>
+  </div>
+  <div class="column">
+    <h3>Interactive Resume</h3>
+    <p><a href ="http://www.rleonardi.com/interactive-resume/">
+    <img src=robbyleonardi.jpg alt="rleonardi.com"></a>
+    </p>
+    <p>This interactive resume combined with a video game by Robby Leonardi is such a creative way of showcasing his skills and experiences. Robby is a freelancer from New York who does illustration, design, and animation. On his website he also has a tutorial explaining how he created the website. Check it out!
+    </p>
+  </div>
+</div>
 
 </body>
 </html>
