--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="column">
     <h3>Interactive Resume</h3>
     <p><a href ="http://www.rleonardi.com/interactive-resume/">
-    <img src=robbyleonardi.jpg alt="rleonardi.com"></a>
+    <img src=robbyleonardi.jpg alt="rleonardi.com"> width="300" height="300" </a>
     </p>
     <p>This interactive resume combined with a video game by Robby Leonardi is such a creative way of showcasing his skills and experiences. Robby is a freelancer from New York who does illustration, design, and animation. On his website he also has a tutorial explaining how he created the website. Check it out!
     </p>
