--- a/index.html
+++ b/index.html
@@ -119,9 +119,6 @@
                 <h2 class="section-header">Skills</h2>
                 
                 <table>
-                    <colgroup>
-                        <col span="1" style="background-color:rgb(245, 238, 238)">
-                    </colgroup>
                     <thread>
                         <tr>
                             <th><h3>Programming Skills</h3></th>
@@ -210,6 +207,23 @@
 
                 <p><b>See my canvas tag experiment:</b></p>
                 <canvas id="canvas"></canvas>
+
+                <p><b>See some of my favorite movies:</b></p>
+                <table>
+                    <colgroup>
+                        <col span="1" style="background-color:rgb(245, 238, 238)">
+                    </colgroup>
+                    <tr>
+                        <th>Sci-fi</th>
+                        <th>Documentary</th>
+                        <th>Comedy</th>
+                    </tr>
+                    <tr>
+                        <td>"Her"</td>
+                        <td>"Last Breath"</td>
+                        <td>"Minions</td>
+                    </tr>
+                </table>
 
                 <p><b>And my template experiment where I clone some text:</b></p>
                 <div id="template-container"></div>
