--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <tr>
                         <td>"Her"</td>
                         <td>"Last Breath"</td>
-                        <td>"Minions</td>
+                        <td>"Minions"</td>
                     </tr>
                 </table>
 
