--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
                 
                 <div class="projects-images">
                     <img src="images/shadow-mapping-1.png" alt="Shadow Mapping">
-                    <caption>Front view</caption>
                     <img src="images/shadow-mapping-2.png" alt="Shadow Mapping">
-                    <caption>Side view</caption>
                 </div>
                 
                 <p>The next task is to transform the light direction from the world space (the way the scene is positioned with respect to the world coordinates x, y, and z) to the light space (view scene from the prospective of the light source, in our case the light source is the sun) by writing custom lighting functions. We need to implement two draw functions, one for the depth shader and one for the surface shader. Before drawing, we calculate a view light space and a projection light space matrix which would allow us later to render the scene twice from two different perspectives. When building our scene we set the corresponding shaders to the light space view matrix and projection matrix:</p>
@@ -121,7 +119,7 @@
                 <table>
                     <thread>
                         <tr>
-                            <th><h3>Programming Skills</h3></th>
+                            <th>Programming Skills</th>
                         </tr>
                     </thread>
                     <tbody>
