--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                 <h2 class="section-header">Skills</h2>
                 
                 <table>
-                    <thread>
+                    <thead>
                         <tr>
                             <th>Programming Skills</th>
                         </tr>
-                    </thread>
+                    </thead>
                     <tbody>
                         <tr>
                             <td>Python</td>
