--- a/index.html
+++ b/index.html
@@ -119,34 +119,30 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Programming Skills</th>
+                            <th>Skill</th>
+                            <th>Level</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
                             <td>Python</td>
                             <td>&#9733; &#9733; &#9733; &#9733; &#9734;</td>
-                            <td>Advanced</td>
                         </tr>
                         <tr>
                             <td>Java</td>
                             <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
-                            <td>Advanced</td>
                         </tr>
                         <tr>
                             <td>C++</td>
                             <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
-                            <td>Advanced</td>
                         </tr>
                         <tr>
                             <td>HTML</td>
                             <td>&#9733; &#9733; &#9734; &#9734; &#9734;</td>
-                            <td>Beginner</td>
                         </tr>
                         <tr>
                             <td>CSS</td>
                             <td>&#9733; &#9733; &#9734; &#9734; &#9734;</td>
-                            <td>Beginner</td>
                         </tr>
                         <tr>
                             <td></td>
@@ -175,12 +171,8 @@
                     </ul>
                 </details>
                 <br/>
-
-                <script>
-                    const 
-                </script>
                 
-                <p><strong>Learn about my favorite books:</stong></p>
+                <p>Learn about my <strong>favorite books:</strong></p>
                 <p>Books</p>
                 <ol>
                     <li>Build by Tony Fadell</li>
