--- a/index.html
+++ b/index.html
@@ -122,29 +122,29 @@
                     </colgroup>
                     <thead>
                         <tr>
-                            <th>Skill</th>
-                            <th>Level</th>
+                            <th scope="col">Skill</th>
+                            <th scope="col">Level</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Python</td>
+                            <th scope="row">Python</td>
                             <td>&#9733; &#9733; &#9733; &#9733; &#9734;</td>
                         </tr>
                         <tr>
-                            <td>Java</td>
+                            <th scope="row">Java</td>
                             <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
                         </tr>
                         <tr>
-                            <td>C++</td>
+                            <th scope="row">C++</td>
                             <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
                         </tr>
                         <tr>
-                            <td>HTML</td>
+                            <th scope="row">HTML</td>
                             <td>&#9733; &#9733; &#9734; &#9734; &#9734;</td>
                         </tr>
                         <tr>
-                            <td>CSS</td>
+                            <th scope="row">CSS</td>
                             <td>&#9733; &#9733; &#9734; &#9734; &#9734;</td>
                         </tr>
                     </tbody>
