--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="row">Python</td>
+                            <th scope="row">Python</th>
                             <td>&#9733; &#9733; &#9733; &#9733; &#9734;</td>
                         </tr>
                         <tr>
-                            <th scope="row">Java</td>
+                            <th scope="row">Java</th>
                             <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
                         </tr>
                         <tr>
-                            <th scope="row">C++</td>
+                            <th scope="row">C++</th>
                             <td>&#9733; &#9733; &#9733; &#9734; &#9734;</td>
                         </tr>
                         <tr>
-                            <th scope="row">HTML</td>
+                            <th scope="row">HTML</th>
                             <td>&#9733; &#9733; &#9734; &#9734; &#9734;</td>
                         </tr>
                         <tr>
-                            <th scope="row">CSS</td>
+                            <th scope="row">CSS</th>
                             <td>&#9733; &#9733; &#9734; &#9734; &#9734;</td>
                         </tr>
                     </tbody>
