--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img src="images/female-programmer-small.jpg" alt="" />
                     </picture>
                     <p>
-                        My name is <i>Margarita</i>. Friends usually call me <i>Rita</i>. I am currently a Senior at the <em>University of California San Diego</em>. My interests lie in robotics, computer graphics, product development and UI/UX design. I’ve spent past few years growing as a software engineer through education, now I’m ready to put my knowledge and skills into practice.
+                        My name is <i>Margarita</i>. Friends usually call me <em>Rita</em>. I am currently a Senior at the <em>University of California San Diego</em>. My interests lie in robotics, computer graphics, product development and UI/UX design. I’ve spent past few years growing as a software engineer through education, now I’m ready to put my knowledge and skills into practice.
                         <br><br>
                         As a person, I am curious, open-minded, down to earth, and very hardworking. I enjoy travelling and outdoor activities. You can often find me riding my bike, taking long nature walks, or hiking the mountains with breathtaking views. Next on my bucket list is to visit Alaska and learn mountain climbing.
                     </p>
