--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <h2 class="section-header">Skills</h2>
                 
                 <table>
+                    <caption>Programming Skills</caption>
                     <colgroup>
                         <col span="2" style="background-color:rgb(245, 238, 238)">
                     </colgroup>
