--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </p>
             </div>
         </section>
-
+<!-- 
         <!--PROJECTS SECTION-->
         <h1 class="section-header" id="my-projects">Projects</h1>
         <section id="projects">
@@ -116,7 +116,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
         <!--SKILLS SECTION-->
         <h1 class="section-header" id="my-skills">Skills</h1>
