--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul id="nav-menu">
             <li><a href="index.html#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#my-projects">Projects</a></li>
+<!--             <li><a href="#my-projects">Projects</a></li> -->
             <li><a href="#my-skills">Skills</a></li>
             <li><a href="#contact-me">Contact</a></li>
         </ul>
