--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul id="nav-menu">
             <li><a href="index.html#">Home</a></li>
             <li><a href="#about">About</a></li>
-<!--             <li><a href="#my-projects">Projects</a></li> -->
+            <li><a href="#my-projects">Projects</a></li>
             <li><a href="#my-skills">Skills</a></li>
             <li><a href="#contact-me">Contact</a></li>
         </ul>
@@ -89,7 +89,7 @@
         </section>
         
         <!--PROJECTS SECTION-->
-        <!-- 
+       
         <h1 class="section-header" id="my-projects">Projects</h1>
         <section id="projects">
             <div id="projects-container">
@@ -117,7 +117,7 @@
                 </div>
 
             </div>
-        </section> -->
+        </section>
 
         <!--SKILLS SECTION-->
         <h1 class="section-header" id="my-skills">Skills</h1>
