--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="icon" href="/resources/logo5.svg" type="image/x-icon">
 
     <!--Stylesheet-->
-    <link href="styles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" type="text/css"/>
 
 
 
