--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Title -->
     <title>Margarita Leonova | Home</title>
 
-    <link rel="icon" href="/resources/logo5.svg" type="image/x-icon">
+    <link rel="icon" href="/resources/icon.svg" type="image/x-icon">
 
     <!--Stylesheet-->
     <link href="styles.css" rel="stylesheet" />
@@ -96,6 +96,7 @@
                 <h1 class="sub-heading">Latest projects</h1>
 
                 <div class="project-container">
+                    
                     <div class="project">
                         <div class="project-gallery">
 
